[package]
name = "xpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.1.9", features=["derive"]}
tokio = { version = "1.26.0", features = ["full"] }
dirs= "4.0.0"
zip = "0.6.4"
walkdir = "2.3.3"
anyhow = "1.0.69"