[package]
name = "broadside"
version = "0.1.0"
edition = "2021"

authors = ["Scott Williams <scott@starlane.io>"]
description = "The Cosmic Cli provides command line inerface to access a running server enabled with The Cosmic Initiative framework http://thecosmicinitiative.io"
repository = "https://github.com/cosmic-initiative/broadside"
license = "MIT"

[[bin]]
name="broadside"
src="src/main.rs"

[lib]
name="broadside"
src="src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.1.9", features=["derive"]}
tokio = { version = "1.26.0", features = ["full"] }
dirs= "4.0.0"
zip = "0.6.4"
walkdir = "2.3.3"
anyhow = "1.0.69"
acid-store = "0.13.0"
chumsky = "0.9.2"
semver = "1.0.17"